# youtube-commenter

./: .env.example  .gitignore  Cargo.toml  README.md  package.json
docs/: architecture.md  implementation-plan.md
flutter/: .env.example  pubspec.yaml
flutter/lib/: main.dart
flutter/lib/models/: comment.dart  user.dart  video.dart
flutter/lib/screens/: home_screen.dart  login_screen.dart  splash_screen.dart
flutter/lib/services/: api_service.dart  auth_service.dart
flutter/lib/utils/: video_id_extractor.dart
src/: cli.js  index.js  main.rs  youtube-api.js
src/api/: handlers.rs
src/db/: mod.rs
src/models/: ai.rs  auth.rs  mod.rs
src/services/: ai.rs  auth.rs  mod.rs  youtube.rs
src/utils/: mod.rs
