[package]
name = "youtube-commenter"
version = "0.1.0"
edition = "2021"
authors = ["Numan Syed <smnuman@gmail.com>"]
description = "A Rust application with Flutter frontend for checking YouTube comments and replies"

[dependencies]
# Web framework
axum = "0.7.2"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors"] }

# Async runtime
tokio = { version = "1.34.0", features = ["full"] }

# Database
surrealdb = { version = "1.0.0", features = ["kv-mem"] }

# Serialization/Deserialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# HTTP client for YouTube API
reqwest = { version = "0.11.22", features = ["json"] }

# Error handling
anyhow = "1.0.75"
thiserror = "1.0.50"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Environment variables
dotenv = "0.15.0"

# Utilities
chrono = { version = "0.4.31", features = ["serde"] }
async-trait = "0.1.74"
futures = "0.3.29"

[dev-dependencies]
tokio-test = "0.4.3"
